Mob overflow issue solved

--- a/static/css/event.css
+++ b/static/css/event.css
@@ -340,6 +340,9 @@ section{
     box-shadow: 0px 0px 19px 6px #8F1BD6;
     border-radius: 100px;
 }
+.home{
+    overflow-x: hidden;
+}
 @media screen and (max-width: 500px) {
     .page-heading{
         font-size: 70px;
@@ -357,5 +360,8 @@ section{
     .event-description{
         font-weight: 400;
         font-size: 18px;
+    }
+    body{
+        overflow-x: hidden;
     }
 }
